k8/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: drtd-web-svc
  labels:
    app: drtd-web
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: drtd-web-svc
